@@ -1,7 +1,7 @@
 @echo off
 @REM WebSphere Application Server liberty launch script
 @REM
-@REM Copyright IBM Corp. 2011, 2017
+@REM Copyright IBM Corp. 2011, 2019
 @REM The source code for this program is not published or other-
 @REM wise divested of its trade secrets, irrespective of what has
 @REM been deposited with the U.S. Copyright Office.
@@ -42,6 +42,14 @@
 @REM
 @REM WLP_DEBUG_ADDRESS - The port to use when running the server in debug mode.
 @REM              The default value is 7777.
+@REM
+@REM WLP_DEBUG_SUSPEND - Whether to suspend the jvm on startup or not. This can be
+@REM              set to y to suspend the jvm on startup until a debugger attaches,
+@REM              or set to n to startup without waiting for a debugger to attach.
+@REM              The default value is y.
+@REM
+@REM WLP_DEBUG_REMOTE - Whether to allow remote debugging or not. This can be set
+@REM              to y to allow remote debugging. The default value is n. 
 @REM
 @REM ----------------------------------------------------------------------------
 
@@ -116,9 +124,7 @@ if "help" == "%ACTION%" (
 ) else if "run" == "%ACTION%" (
   call:runServer
 ) else if "debug" == "%ACTION%" (
-  if not defined WLP_DEBUG_ADDRESS set WLP_DEBUG_ADDRESS=7777
-  set JAVA_PARAMS_QUOTED=-Dwas.debug.mode=true -Dcom.ibm.websphere.ras.inject.at.transform=true -Dsun.reflect.noInflation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address="!WLP_DEBUG_ADDRESS!" !JAVA_PARAMS_QUOTED!
-  call:runServer
+  call:debugServer
 ) else if "status" == "%ACTION%" (
   call:serverStatus
 ) else if "status:fast" == "%ACTION%" (
@@ -227,6 +233,28 @@ goto:eof
   call:javaCmdResult
 goto:eof
 
+:debugServer
+  call:serverEnvAndJVMOptions
+  if not %RC% == 0 goto:eof
+
+  if not defined WLP_DEBUG_ADDRESS set WLP_DEBUG_ADDRESS=7777
+  if not defined WLP_DEBUG_SUSPEND set WLP_DEBUG_SUSPEND=y
+  if not defined WLP_DEBUG_REMOTE set WLP_DEBUG_REMOTE_HOST="0.0.0.0:"
+  if not defined WLP_DEBUG_REMOTE_HOST set WLP_DEBUG_REMOTE_HOST=""
+  set JAVA_PARAMS_QUOTED=-Dwas.debug.mode=true -Dsun.reflect.noInflation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend="!WLP_DEBUG_SUSPEND!",address="!WLP_DEBUG_REMOTE_HOST!!WLP_DEBUG_ADDRESS!" !JAVA_PARAMS_QUOTED!
+
+  call:serverExists true
+  if %RC% == 2 goto:eof
+
+  call:serverWorkingDirectory
+  set SAVE_IBM_JAVA_OPTIONS=!IBM_JAVA_OPTIONS!
+  set IBM_JAVA_OPTIONS=!SERVER_IBM_JAVA_OPTIONS!
+  !JAVA_CMD_QUOTED! !JAVA_AGENT_QUOTED! !JVM_OPTIONS! !JAVA_PARAMS_QUOTED! --batch-file !PARAMS_QUOTED!
+  set RC=%errorlevel%
+  set IBM_JAVA_OPTIONS=!SAVE_IBM_JAVA_OPTIONS!
+  call:javaCmdResult
+goto:eof
+
 :runServer
   call:serverEnvAndJVMOptions
   if not %RC% == 0 goto:eof
@@ -282,7 +310,7 @@ goto:eof
     set IBM_JAVA_OPTIONS=!SERVER_IBM_JAVA_OPTIONS!
 
     @REM Use javaw so command windows can be closed.
-    start /b "" !JAVA_CMD_QUOTED!w !JAVA_AGENT_QUOTED! !JVM_OPTIONS! !JAVA_PARAMS_QUOTED! --batch-file !PARAMS_QUOTED! >> "%X_LOG_DIR%\%X_LOG_FILE%" 2>&1
+    start /min /b "" !JAVA_CMD_QUOTED!w !JAVA_AGENT_QUOTED! !JVM_OPTIONS! !JAVA_PARAMS_QUOTED! --batch-file !PARAMS_QUOTED! >> "%X_LOG_DIR%\%X_LOG_FILE%" 2>&1
 
     set IBM_JAVA_OPTIONS=!SAVE_IBM_JAVA_OPTIONS!
 
@@ -338,7 +366,8 @@ goto:eof
   call:serverEnv
   call:serverExists true
   if %RC% == 2 goto:eof
-  "!WLP_INSTALL_DIR!\bin\tools\win\prunsrv.exe"  //IS//%SERVER_NAME% --Startup=manual --DisplayName="%SERVER_NAME%" --Description="IBM WebSphere Liberty Profile" ++DependsOn=Tcpip --LogPath="%WLP_INSTALL_DIR%\usr\servers\%SERVER_NAME%\logs" --StdOutput=auto --StdError=auto --StartMode=exe --StartPath="%WLP_INSTALL_DIR%" --StartImage="%WLP_INSTALL_DIR%\bin\server.bat" ++StartParams=start#%SERVER_NAME% --StopMode=exe --StopPath="%WLP_INSTALL_DIR%" --StopImage="%WLP_INSTALL_DIR%\bin\server.bat" ++StopParams=stop#%SERVER_NAME%                                                                                                                             
+  "!WLP_INSTALL_DIR!\bin\tools\win\prunsrv.exe"  //IS//%SERVER_NAME% --Startup=manual --DisplayName="%SERVER_NAME%" --Description="Open Liberty" ++DependsOn=Tcpip --LogPath="%WLP_INSTALL_DIR%\usr\servers\%SERVER_NAME%\logs" --StdOutput=auto --StdError=auto --StartMode=exe --StartPath="%WLP_INSTALL_DIR%" --StartImage="%WLP_INSTALL_DIR%\bin\server.bat" ++StartParams=start#%SERVER_NAME% --StopMode=exe --StopPath="%WLP_INSTALL_DIR%" --StopImage="%WLP_INSTALL_DIR%\bin\server.bat" ++StopParams=stop#%SERVER_NAME%                                                                                                                             
+  set RC=!errorlevel!
 goto:eof
 
 :startWinService
@@ -358,8 +387,9 @@ goto:eof
     )
   ) else (
      "!WLP_INSTALL_DIR!\bin\tools\win\prunsrv.exe" //ES//%SERVER_NAME%
-      call:serverRunning
-      call:javaCmdResult
+     set RC=!errorlevel!
+     call:serverRunning
+     call:javaCmdResult
   )   
 goto:eof
 
@@ -369,11 +399,13 @@ goto:eof
   call:serverExists true
   if %RC% == 2 goto:eof
   "!WLP_INSTALL_DIR!\bin\tools\win\prunsrv.exe" //SS//%SERVER_NAME%
+  set RC=!errorlevel!
 goto:eof
 
 :unregisterWinService
   if NOT "%OS%" == "Windows_NT" goto:eof
   "!WLP_INSTALL_DIR!\bin\tools\win\prunsrv.exe" //DS//%SERVER_NAME%
+  set RC=!errorlevel!
 goto:eof
 
 :pauseServer
@@ -470,7 +502,7 @@ goto:eof
 
   @REM Command-line parsing of -Xshareclasses does not allow "," in cacheDir.
   if "!WLP_OUTPUT_DIR:,=!" == "!WLP_OUTPUT_DIR!" (
-    set SERVER_IBM_JAVA_OPTIONS=-Xshareclasses:name=liberty-%%u,nonfatal,cacheDir="%WLP_OUTPUT_DIR%\.classCache" -XX:ShareClassesEnableBCI -Xscmx60m -Xscmaxaot8m !IBM_JAVA_OPTIONS!
+    set SERVER_IBM_JAVA_OPTIONS=-Xshareclasses:name=liberty-%%u,nonfatal,cacheDir="%WLP_OUTPUT_DIR%\.classCache" -XX:ShareClassesEnableBCI -Xscmx80m !IBM_JAVA_OPTIONS!
   ) else (
     set SERVER_IBM_JAVA_OPTIONS=!IBM_JAVA_OPTIONS!
   )
@@ -478,7 +510,7 @@ goto:eof
   @REM Add -Xquickstart -Xnoaot for client JVMs only.  AOT is ineffective if
   @REM JVMs have conflicting options, and it's more important that server JVMs
   @REM be able to use AOT.
-  set IBM_JAVA_OPTIONS=-Xquickstart -Xnoaot !SERVER_IBM_JAVA_OPTIONS!
+  set IBM_JAVA_OPTIONS=-Xquickstart -Xnoaot !IBM_JAVA_OPTIONS!
 goto:eof
 
 @REM
@@ -508,6 +540,8 @@ goto:eof
   )
   @REM Avoid HeadlessException.
   set JVM_OPTIONS=-Djava.awt.headless=true !JVM_OPTIONS!
+  @REM allow late self attach for when the localConnector-1.0 feature is enabled
+  set JVM_OPTIONS=-Djdk.attach.allowAttachSelf=true !JVM_OPTIONS!
 
 
   @REM The order of merging the jvm.option files sets the precedence. 
@@ -540,7 +574,25 @@ goto:eof
   if exist "%JAVA_HOME%\lib\modules" (
     call:mergeJVMOptions "%WLP_INSTALL_DIR%\lib\platform\java\java9.options"
   )
-  
+
+  @REM Filter off all of the -D and -X arguments off of !PARAMS_QUOTED! and
+  @REM add them onto !JVM_OPTIONS!
+  set INCLUDE_NEXT_ARG=F
+  for %%a in (%PARAMS_QUOTED%) do (
+    set CUR_ARG=%%a
+    if "!INCLUDE_NEXT_ARG!"=="T" (
+      set JVM_TEMP_OPTIONS=!JVM_TEMP_OPTIONS!=!CUR_ARG!
+      set INCLUDE_NEXT_ARG=F
+    ) else if "!CUR_ARG:~0,2!"=="-D" (
+      @REM key=value arguments get parsed as two separate tokens, so when we see
+      @REM a -Dkey=value option we need to set a flag to include the next arg
+	  set JVM_TEMP_OPTIONS=!JVM_TEMP_OPTIONS! !CUR_ARG!
+	  set INCLUDE_NEXT_ARG=T
+    ) else if "!CUR_ARG:~0,2!"=="-X" (
+      set JVM_TEMP_OPTIONS=!JVM_TEMP_OPTIONS! !CUR_ARG!
+    ) 
+  )
+
   set JVM_OPTIONS=!JVM_OPTIONS!%JVM_TEMP_OPTIONS%
 goto:eof
 
